2022-12-01 [8.1.6] (devel)
--------------------------------------------------
usb-serial               - add serial login via usb serial adapter
                           (usb devices only, must be configured)


2022-12-01 [8.1.5] (release)
--------------------------------------------------


2022-12-01 [8.1.4]
--------------------------------------------------
private vpn              - fix private vpn


2022-12-01 [8.1.3] (testing)
--------------------------------------------------
backbone                 - update backbone server
LED                      - adapt LED status for new router
wifi                     - improve wifi infos in gui


2022-10-02 [8.1.2] (devel)
--------------------------------------------------
bmxd                      - rework gateway selection to minimize wifi disconnections
                          - reset DNS when no GW is selected
gui                       - give more information about wifi channels
                          - fix 5Ghz wifi scan
sysinfo                   - set valid values for wifi channel when not present
                          - set airtime to zero when wifi is not present
router                    - add TP-Link Archer C6 v3, TP-Link Archer C6U v1

2022-10-02 [8.1.0] (release)
--------------------------------------------------
led                       - minor improvments to led control (gui)


2022-09-15 [8.0.8] (testing)
--------------------------------------------------
router                    - add router xiaomi_mi-router-4a-100m
ddns                      - remove unused ddns

2022-05-x [8.0.7] (testing)
--------------------------------------------------
sysinfo                   - add wifi channel info
usb-tethering             - rework usb tethering to support IPhone, Huawei 3372h-320, ZTE MF79U, TP-Link M7300
                          - add support for TP-Link routers TL-WR2543N, TL-WDR3600, TL-WDR4300
community                 - add group_id to group routers for any statistic/mapping reasons

